
Fri Mar 26, 2010: Released Refine 1.5.0 (requires >= FUN3D-45226 (11.0.0)).

This minor rev bump is an API change to include unravel.
Added import and export of NGP grids for a DSMC code.

added NGP file import and export for file-based DSMC adaptation

Thu Jan 28, 2010: Released Refine 1.4.3 (requires >= FUN3D-25331 (10.4.0)).

FAUXGeom improved to allow cylindrical surfaces. (still need derivatives)

to repair arbitrary FAUXGeom planes by fixing NaN in 
gridmath.c(gridVectorOrthogonalize) and completing 
FAUXGeom.c(CADGeom_PointOnFace).

Fri Jan 16, 2009: Released Refine 1.4.2 (requires >= FUN3D-25331 (10.4.0)).

FAUXGeom improved to allow arbitrary planes or no faces.

A sensitivity to round-off error from Intel compiler optimizations in
the FUN3D metric construction has been reduced in recent versions of
FUN3D. If problems are reported in anisotropic_adapt_parameter update
FUN3D.

Thu Jan 3, 2008: Released Refine 1.4.1 (requires >= FUN3D-25331 (10.4.0)).

Improved INSTALL. lowered GRID_VOLUME_TOL and GRID_AREA_TOL to 1.0e-40 for
very small domains.

Thu Sep 27, 2007: Released Refine 1.4.0

API change to update ghost frozen state, requires >= FUN3D-25331 (10.4.0).
Fixed calls to correctly obtain GridEx SDK edge parameters.

Wed Apr 11, 2007: Released Refine 1.3.1

GTech release. Includes quick bug fix for the intersection of
projection, gridmove and frozen boundary layer.

Fri Apr 6, 2007: Released Refine 1.3.0

GTech release. Account for fun3d-23948 c2n index flip. Incudes
FAUXGeom (reads input file for planar geometry instead of needed to
edit C files). Fixes edge parameter parallel consistency.

Wed Feb 20, 2007: Released Refine 1.2.14

Added ProjectX .gri format export.

Wed Jul 5, 2006: Released Refine 1.2.13

For Tin-Chee. Fixed up INSTALL directions.

Tue Jun 27, 2006: Released Refine 1.2.12

For Pawel MSL RCS work on Columbia.  To include parallel bug fixes
(prevent hanging nodes) while removing cells that can cause projection
failures.
