@@ -1,4 +1,8 @@
 
+Future Date: Released Refine *.*.* (requires >= FUN3D-45226 (11.0.0)).
+
+Added refine-convert to convert grid file types.
+
 Fri Mar 26, 2010: Released Refine 1.5.0 (requires >= FUN3D-45226 (11.0.0)).
 
 This minor rev bump is an API change to include unravel.
